# OxyMouse

./: LICENSE  README.md  pyproject.toml  visualize.py
.github/workflows/: mypy.yml
examples/: with_playwright.py  with_selenium.py
oxymouse/: __init__.py  oxymouse.py  visualize.py
oxymouse/algorithms/bezier_mouse/: bezier_mouse.py
oxymouse/algorithms/gaussian_mouse/: gaussian_mouse.py
oxymouse/algorithms/perlin_mouse/: perlin_mouse.py
oxymouse/mouse/: base.py
oxymouse/mouse/bezier_mouse/: bezier_mouse.py
oxymouse/mouse/gaussian_mouse/: gaussian_mouse.py
oxymouse/mouse/perlin_mouse/: perlin_mouse.py
